<resources>
    <!-- UI related string properties. Consider to locale.  -->
    <string name="app_name">b3Runtime</string>
    <string name="title_activity_maps">b3Runtime</string>
    <string name="goToSettingsButtonText">OK, go to settings</string>
    <string name="negativeButtonText">NO, exit app</string>
    <string name="changePermissionsInSettingsMessage">To change this please go to App Settings >
        Permissions and grant Location permissions</string>
    <string name="deniedPermissionsDialogTitle">You have permanently denied needed permissions</string>
    <string name="permissionsDialogTitle">Location Permission Needed</string>
    <string name="permissionsDialogMessage">This app needs the Location permission, please accept to be able to use app</string>
    <string name="okButton">OK</string>
    <string name="somethingWentWrong">Something went wrong… Please try again</string>
    <string name="question">QUESTION</string>
    <string name="confirm">Confirm</string>
    <string name="correctAnswer">Your answer is correct! Continue on your Quest.</string>
    <string name="continueButtonText">Continue</string>
    <string name="wrongAnswer">Wisdom comes with experience. Take an extra route to clear your Мind.</string>
    <string name="penaltyText">You have completed your extra route. Go forth young padawan!</string>
    <string name="intent_failed">settings intent failed</string>
    <string name="chooseCompetition">Choose competition</string>
    <string name="chooseTrack">Choose track</string>
    <string name="channel_name">b3_runtime</string>
    <string name="channel_description">channel_description</string>
    <string name="checkpointNotificationTitle">Checkpoint Notification</string>
    <string name="checkpointNotificationText">You are in checkpoint now. Click here to open the app!</string>
    <string name="resultText">You answered %d out of %d checkpoints correctly.\nYour total time was %d minutes and %d seconds.</string>
    <string name="soundOnText">Sound on</string>
    <string name="soundOffText">Sound off</string>
    <string name="show_profile_button_text">Show Profile</string>
    <string name="choose_competition_button_text">Choose Competition</string>
    <string name="sign_out_button_text">Sign out</string>
    <string name="reset_password_button_text">Send reset password mail</string>
    <string name="maps_activity_back_pressed_alert_title">Are you sure you want to quit?</string>
    <string name="maps_activity_back_pressed_alert_message">Your track time will still increase.</string>
    <string name="maps_activity_back_pressed_alert_positive_button">Yes</string>
    <string name="maps_activity_back_pressed_alert_negative_button">No</string>
    <string name="no_text">No</string>
    <string name="changePermissionsInSettingsMessage_not_specific">To change this please go to App Settings >
        Permissions and grant needed Permissions</string>
    <string name="description_profile_image">Image for profile</string>
    <string name="start_confirm_text">Are you ready to start?</string>
    <string name="start_text">Start</string>
    <string name="close_text">Close</string>
    <string name="home_title">B3runtime</string>
    <string name="take_photo">take photo</string>
    <string name="profile_username_hint">Username</string>
    <string name="profile_mail_hint">Mail</string>
    <string name="result_answer_correct_hint">YOUR ANSWER IS CORRECT....</string>
    <string name="menu_main_reset_track">Reset Track</string>
    <string name="menu_main_sound_on">Sound on</string>
    <string name="menu_main_toggle_satellite">Toggle satellite view</string>
    <string name="menu_main_toggle_dark_mode">Toggle dark mode</string>
    <string name="menu_main_toggle_lines">Toggle track lines</string>
    <string name="track_unfinished">Track unfinished</string>
    <string name="continue_track_button_text">Continue track</string>
    <string name="results">Results</string>
    <string name="leader_board_title">Top 5</string>
    <string name="leader_board_track_name">Track name</string>
    <string name="results_title">My Results</string>
    <string name="profile_firstname_hint">First name</string>
    <string name="profile_lastname_hint">Last name</string>
    <string name="profile_organization_hint">Organization</string>
    <string name="invalidValueDialogTitle">Invalid value</string>
    <string name="invalidValueDialogMessage">This cannot be empty.</string>
    <string name="edit_username">edit username</string>
    <string name="edit_last_name">edit last name</string>
    <string name="edit_first_name">edit first name</string>
    <string name="edit_organization">edit organization</string>
    <string name="username_label">Username:</string>
    <string name="first_name_label">First name:</string>
    <string name="last_name_label">Last name:</string>
    <string name="organization_label">Organization:</string>

    <!-- string properties for application settings  -->
    <string name="question_fragment_added_key">questionAdded</string>
    <string name="competition_fragment_added_key">competitionAdded</string>
    <string name="profile_fragment_added_key">profileAdded</string>
    <string name="track_fragment_added_key">trackAdded</string>
    <string name="result_fragment_added_key">resultAdded</string>
    <string name="leader_board_fragment_added_key">leaderBoardAdded</string>
    <string name="geofenceIntentName">newQuestion</string>
    <string name="correct_answer_sound_file">sfx/correct_answer.mp3</string>
    <string name="wrong_answer_sound_file">sfx/wrong_answer.mp3</string>
    <string name="track_start_sound_file">sfx/pickup_coin.wav</string>
    <string name="track_goal_sound_file">sfx/pickup_coin.wav</string>
    <string name="sound_pref_key">sound_pref_key</string>
    <string name="music_pref_key">music_pref_key</string>
    <string name="profile_image_file_name">avatar.jpg</string>
    <string name="external_storage_image_path">/Pictures/b3runtime</string>
    <string name="image_file_date_format">yyyyMMdd_HHmmss</string>
    
</resources>
