<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.map.MapsActivity">

    <item
        android:id="@+id/action_reset"
        android:orderInCategory="100"
        android:title="@string/menu_main_reset_track"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sound_mode"
        android:orderInCategory="200"
        android:title="@string/menu_main_sound_on"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_satellite_view"
        android:orderInCategory="300"
        android:title="@string/menu_main_toggle_satellite"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_dark_mode"
        android:orderInCategory="400"
        android:title="@string/menu_main_toggle_dark_mode"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_draw_lines"
        android:orderInCategory="500"
        android:title="@string/menu_main_toggle_lines"
        app:showAsAction="never" />

</menu>